# CG_RaytracingModel

./: CMakeLists.txt  README.md  camera.cpp  camera.h  cube.cpp  cube.h  intersect.h  light.h  main.cpp  object.h  print.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h
